fix copy edits. fix slight spacing issues. restructure css files.

--- a/assets/stylesheets/components/_backgrounds.scss
+++ b/assets/stylesheets/components/_backgrounds.scss
@@ -3,3 +3,7 @@
   // background-image: linear-gradient(-180deg, #373737 0%, #373737 45%, #222322 98%);
   background: $brand-black;
 }
+
+.light-bg {
+  background: #fff;
+}
